Add EEI operator input receipt
